# emulator_NES

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: bus.cpp  bus.h  cpu.cpp  cpu.h  debugger.cpp  debugger.h  emulator.cpp  emulator.h  input.cpp  input.h  main.cpp  nes.cpp  nes.h  ppu.cpp  ppu.h  screen.cpp  screen.h
